force-app/main/default/objects/Est_vs_Actuals__c/Est_vs_Actuals__c.object-meta.xml
<CustomObject>
    <label>Est Vs Actual</label>
    <nameField>
        <label>Est vs Actuals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Est Vs Actuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>