force-app/main/default/objects/Est_vs_Actuals__c/fields/Actual_Average_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Average_Bill_Rate__c</fullName>
    <formula>IF(OR( Actual_Days__c = 0, Actual_Hours__c  = 0), 0, IF ( Assignment__r.Daily_Bill_Rate__c, ( Actual_Billable_Amount__c / Actual_Days__c ), ( Actual_Billable_Amount__c / Actual_Hours__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Average Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>