force-app/main/default/objects/Est_vs_Actuals__c/fields/Actual_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Billable_Amount__c</fullName>
    <label>Actual Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>