force-app/main/default/objects/Est_vs_Actuals__c/fields/Actual_Billings__c.field-meta.xml
<CustomField>
    <fullName>Actual_Billings__c</fullName>
    <formula>Actual_Billable_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Billings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>