force-app/main/default/objects/Est_vs_Actuals__c/fields/Actual_Days__c.field-meta.xml
<CustomField>
    <fullName>Actual_Days__c</fullName>
    <label>Actual Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>