force-app/main/default/objects/Est_vs_Actuals__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment</label>
    <referenceTo>EMS_TM_Assignment__c</referenceTo>
    <relationshipLabel>Est Vs Actuals</relationshipLabel>
    <relationshipName>Est_Vs_Actuals</relationshipName>
    <type>Lookup</type>
</CustomField>