force-app/main/default/objects/Est_vs_Actuals__c/fields/Days_Percent_Variance__c.field-meta.xml
<CustomField>
    <fullName>Days_Percent_Variance__c</fullName>
    <formula>IF( Estimated_Days__c =0,0,( Actual_Days__c - Estimated_Days__c) / Estimated_Days__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Percent Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>