force-app/main/default/objects/Est_vs_Actuals__c/fields/Days_Variance__c.field-meta.xml
<CustomField>
    <fullName>Days_Variance__c</fullName>
    <formula>Actual_Days__c  - Estimated_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>