force-app/main/default/objects/Est_vs_Actuals__c/fields/Estimated_Days__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Days__c</fullName>
    <label>Estimated Days</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>