force-app/main/default/objects/Est_vs_Actuals__c/fields/EvA_Variance__c.field-meta.xml
<CustomField>
    <fullName>EvA_Variance__c</fullName>
    <formula>if( Scheduled_Billings__c  = 0.0, 0.0, Actual_Billable_Amount__c  / Scheduled_Billings__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EvA Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>