force-app/main/default/objects/Est_vs_Actuals__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>EMS_TM_Project__c</referenceTo>
    <relationshipLabel>Est Vs Actuals</relationshipLabel>
    <relationshipName>Est_Vs_Actuals</relationshipName>
    <type>Lookup</type>
</CustomField>