force-app/main/default/objects/Est_vs_Actuals__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Est Vs Actuals</relationshipLabel>
    <relationshipName>Est_Vs_Actuals</relationshipName>
    <type>Lookup</type>
</CustomField>