force-app/main/default/objects/Est_vs_Actuals__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Est Vs Actuals (Resource)</relationshipLabel>
    <relationshipName>Est_Vs_Actuals1</relationshipName>
    <type>Lookup</type>
</CustomField>