force-app/main/default/objects/Est_vs_Actuals__c/fields/Scheduled_Billings__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Billings__c</fullName>
    <formula>if ( Assignment__r.Daily_Bill_Rate__c , Assignment__r.Bill_Rate__c * Estimated_Days__c , Assignment__r.Bill_Rate__c * Estimated_Hours__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Billings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>