force-app/main/default/objects/Est_vs_Actuals__c/fields/Timecards_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Timecards_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Timecards Submitted</label>
    <type>Checkbox</type>
</CustomField>